@@ -124,3 +124,4 @@ Added the Delete Records In Selected button to the main page, for removing the s
 ---- Changes since 1.530 ----
 The default view for new zones can now be set via an option on the Module Config page.
 When adding cluster slave servers, their IPs are added to the also-notify and allow-transfer blocks of each domain added to the slave.
+IPv6 addresses can now be used for remote nameservers in slave and delegation zones.
